; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/PicoDrive/platform/libpicofe/linux/extr_sndout_alsa.c_sndout_alsa_wait.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/PicoDrive/platform/libpicofe/linux/extr_sndout_alsa.c_sndout_alsa_wait.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@handle = common dso_local global i32 0, align 4
@buffer_size = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @sndout_alsa_wait() #0 {
  %1 = alloca i32, align 4
  br label %2

2:                                                ; preds = %0, %13
  %3 = load i32, i32* @handle, align 4
  %4 = call i32 @snd_pcm_avail(i32 %3)
  store i32 %4, i32* %1, align 4
  %5 = load i32, i32* %1, align 4
  %6 = icmp slt i32 %5, 0
  br i1 %6, label %12, label %7

7:                                                ; preds = %2
  %8 = load i32, i32* %1, align 4
  %9 = load i32, i32* @buffer_size, align 4
  %10 = sdiv i32 %9, 2
  %11 = icmp sge i32 %8, %10
  br i1 %11, label %12, label %13

12:                                               ; preds = %7, %2
  br label %15

13:                                               ; preds = %7
  %14 = call i32 @usleep(i32 4000)
  br label %2

15:                                               ; preds = %12
  ret void
}

declare dso_local i32 @snd_pcm_avail(i32) #1

declare dso_local i32 @usleep(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
